smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/byte-strings/invalid-escape-apostrophe.smithy
// Syntax error at line 4, column 16: Error parsing byte string: Invalid escape found in string: `\'` | Model
namespace smithy.example

@documentation(b"\'")
string MyString
